[package]
name = "mps_rigid_body"
version = "0.1.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rapier3d = { package = "rapier3d-f64", version = "0.33.0", features = ["parallel"] }
ljni = { version = "0.21.0", package = "jni" }
rayon = "1.10"


[build-dependencies]
cbindgen = "0.29.3"
