[package]
name = "mps-ffm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mps-core = { path = "../mps-core" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
debug = 0