[package]
name = "mps-jni"
version.workspace = true
edition.workspace = true

[dependencies]
ljni = { workspace = true }
mps-core = { path = "../mps-core" }
mps-ffm = { path = "../mps-ffm" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
debug = 0